--- a/Project Codes/index.html
+++ b/Project Codes/index.html
@@ -1,1 +1,25 @@
-a
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+
+	 <link rel="stylesheet" href="style.css">
+
+	<title></title>
+</head>
+<body>
+	
+<!-- Header Starts -->
+ <header>
+<div class="container">
+	<div class="row">
+		
+        
+        	 <div class="header-top">
+
+        	 	<div class="logo ">
+
+        	 		<a href="index.html"><h3>MCCAPP.com</h3></a>
+        	 	</div>
