--- a/Project Codes/index.html
+++ b/Project Codes/index.html
@@ -23,3 +23,20 @@
 
         	 		<a href="index.html"><h3>MCCAPP.com</h3></a>
         	 	</div>
+
+        	 	<div class="menu ">
+
+        	 		<ul>
+        	 			<li><a href="#">Home</a></li>
+        	 			<li><a href="#">About</a></li>
+        	 			<li><a href="#">Products</a></li>
+        	 			<li><a href="#">Calender</a></li>
+        	 			<li><a href="#">Payment</a></li>
+        	 			<li><a href="#">Health Tips</a></li>
+        	 			<li><a href="#">Contact</a></li>
+        	 			<li><a href="#"><i class="fas fa-bars"></i></a></li>
+        	 		</ul>
+        	 		
+        	 	</div>
+        	 	
+        	 </div>
